# phantom-bpf

./: .gitignore  CMakeLists.txt  Dockerfile.build  README.md  ROADMAP.md  docker-compose.build.yml
.github/workflows/: ci.yml
cmake/: BpfObject.cmake
include/bpf/: phantom_events.h
include/phantom/: bounded_queue.hpp  correlator.hpp  event.hpp  http_aggregator.hpp  json_exporter.hpp  pipeline.hpp
src/agent/: correlator.cpp  event.cpp  http_aggregator.cpp  json_exporter.cpp  main.cpp  pipeline.cpp
src/bpf/: phantom_http.bpf.c
tests/: agent_core_tests.cpp
